@startuml

title __SERVICE's Class Diagram__\n

  namespace com.example.keystone_try {
    namespace step {
      namespace service {
        class com.example.keystone_try.step.service.StepService {
            ~ notifyId_Step : int
            ~ notify_more_remind_id : int
            ~ notify_remind_id : int
            {static} - CURRENT_DATE : String
            - CURRENT_STEP : int
            - TAG : String
            {static} - duration : int
            - hasRecord : boolean
            - hasStepCount : int
            - mBatInfoReceiver : BroadcastReceiver
            - mBuilder : Builder
            - mNotificationManager : NotificationManager
            - previousStepCount : int
            - sensorManager : SensorManager
            {static} - stepSensorType : int
            + getDefalutIntent()
            + getStepCount()
            + onAccuracyChanged()
            + onBind()
            + onCreate()
            + onDestroy()
            + onSensorChanged()
            + onStart()
            + onStartCommand()
            + onUnbind()
            + registerCallback()
            - addBasePedometerListener()
            - addCountStepListener()
            - getTodayDate()
            - initBroadcastReceiver()
            - initNotification()
            - initTodayData()
            - isCall()
            - isNewDay()
            - remindMoreWalkNotify()
            - remindNotify()
            - save()
            - startMyOwnForeground()
            - startStepDetector()
            - startTimeCount()
            - updateNotification()
        }
      }
    }
  }
  

  namespace com.example.keystone_try {
    namespace step {
      namespace service {
        class com.example.keystone_try.step.service.StepService.StepBinder {
            + getService()
        }
      }
    }
  }
  

  namespace com.example.keystone_try {
    namespace step {
      namespace service {
        class com.example.keystone_try.step.service.StepService.TimeCount {
            + TimeCount()
            + onFinish()
            + onTick()
        }
      }
    }
  }
  

  com.example.keystone_try.step.service.StepService .up.|> android.hardware.SensorEventListener
  com.example.keystone_try.step.service.StepService -up-|> android.app.Service
  com.example.keystone_try.step.service.StepService o-- com.example.keystone_try.step.UpdateUiCallBack : mCallback
  com.example.keystone_try.step.service.StepService o-- com.example.keystone_try.step.accelerometer.StepCount : mStepCount
  com.example.keystone_try.step.service.StepService o-- com.example.keystone_try.step.service.StepService.StepBinder : stepBinder
  com.example.keystone_try.step.service.StepService o-- com.example.keystone_try.step.service.StepService.TimeCount : time
  com.example.keystone_try.step.service.StepService +-down- com.example.keystone_try.step.service.StepService.StepBinder
  com.example.keystone_try.step.service.StepService +-down- com.example.keystone_try.step.service.StepService.TimeCount
  com.example.keystone_try.step.service.StepService.StepBinder -up-|> android.os.Binder
  com.example.keystone_try.step.service.StepService.TimeCount -up-|> android.os.CountDownTimer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
